welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:10: error: ')' expected but 'else' found.
    else if (litMessage()=="X") {recule(3) ;}
    ^